fix horizontal scrollbar

--- a/src/styl/responsive/mobile.styl
+++ b/src/styl/responsive/mobile.styl
@@ -1,6 +1,7 @@
 // GALLERY
 #gallery-holder
   width: 100vw
+  max-width: 100%
   overflow: hidden
 
 .slider-holder
